[project]
name = "mimicmotion-runpod"
version = "1.0.0"
description = "MimicMotion motion transfer Docker runner for RunPod"
requires-python = ">=3.11,<3.12"

dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",

    "diffusers==0.29.2",
    "transformers==4.44.2",
    "accelerate==0.33.0",

    "decord==0.6.0",
    "av>=12.2.0",
    "opencv-python>=4.10.0",

    "einops>=0.8.0",
    "omegaconf>=2.3.0",
    "onnxruntime-gpu>=1.18.0",

    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
    "huggingface-hub>=0.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",

    "gradio>=4.40.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
