[project]
name = "stableanimator-runpod"
version = "1.0.0"
description = "StableAnimator ID-preserving animation Docker runner for RunPod"
requires-python = ">=3.11,<3.12"

dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
    "xformers>=0.0.29",

    "diffusers>=0.25.0,<0.30",
    "transformers==4.35.2",
    "accelerate==0.25.0",
    "timm==0.4.12",

    "insightface>=0.7.3",
    "facexlib>=0.3.0",

    "decord==0.6.0",
    "opencv-python>=4.10.0",
    "onnxruntime-gpu>=1.18.0",

    "einops>=0.8.0",
    "scipy>=1.11.0",
    "numpy<2.0",

    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
    "huggingface-hub>=0.24.0",
    "matplotlib>=3.8.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
